--- a/src/android/build.gradle
+++ b/src/android/build.gradle
@@ -5,9 +5,9 @@ repositories {
 }
 
 dependencies {
-  compile 'com.jumio.android:jumio-mobile-sdk:1.6.0@aar'
-  compile 'com.jumio.android:netverify-resources:1.6.0@aar'
-  compile 'com.jumio.android:netswipe-resources:1.6.0@aar'
-  compile 'com.android.support:appcompat-v7:22.2.0'
-  compile 'com.android.support:cardview-v7:22.2.0'
+  compile('com.jumio.android:jumio-mobile-sdk:1.6.0@aar')
+  compile('com.jumio.android:netverify-resources:1.6.0@aar')
+  compile('com.jumio.android:netswipe-resources:1.6.0@aar')
+  compile('com.android.support:appcompat-v7:22.2.0')
+  compile('com.android.support:cardview-v7:22.2.0')
 }
