--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "type": "git",
     "url": "git+https://github.com/directpayintl/cordova-plugin-jumio-netverify"
   },
+  "private": true,
   "keywords": [
     "cordova",
     "plugin",
